infra: backported code to java 8