@@ -20,6 +20,8 @@
 package com.puppycrawl.tools.checkstyle.checks.javadoc;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Matcher;
@@ -262,10 +264,12 @@ public class SummaryJavadocCheck extends AbstractJavadocCheck {
     private static final String SUMMARY_TEXT = "@summary";
 
     /** Set of allowed Tokens tags in summary java doc. */
-    private static final Set<Integer> ALLOWED_TYPES = Set.of(
+    private static final Set<Integer> ALLOWED_TYPES = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList(
                     JavadocTokenTypes.WS,
                     JavadocTokenTypes.DESCRIPTION,
-                    JavadocTokenTypes.TEXT);
+                    JavadocTokenTypes.TEXT
+    )));
 
     /**
      * Specify the regexp for forbidden summary fragments.
