@@ -603,7 +603,7 @@ public class TreeWalkerTest extends AbstractModuleTestSupport {
         verify(checkerConfig, filePath, expected);
 
         assertWithMessage("External resource is not present in cache")
-                .that(Files.readString(cacheFile.toPath()))
+                .that(new String(Files.readAllBytes(cacheFile.toPath()), StandardCharsets.UTF_8))
                 .contains("InputTreeWalkerSuppressionXpathFilter.xml");
     }
 
